--- a/index.html
+++ b/index.html
@@ -128,65 +128,62 @@
       </ul>
     </section>
 
-    <!-- CHECKUP DEVICES GRID -->
-    <section class="card" id="checkup">
-      <h2 class="section-title">जांच सुविधाएँ / Checkup Services</h2>
-      <p class="section-text">
-        हमारे यहाँ निम्न आधुनिक मशीनों द्वारा जाँच की सुविधाएँ उपलब्ध हैं।
-      </p>
+<section class="checkup-section">
+    <h2 class="section-title">जांच सुविधाएँ / Checkup Services</h2>
+    <p class="section-subtitle">हमारे यहाँ निम्न आधुनिक मशीनों द्वारा जाँच की सुविधाएं उपलब्ध हैं।</p>
 
-      <div class="checkup-grid">
+    <div class="checkup-grid">
 
         <div class="checkup-card">
-          <div class="checkup-img checkup-1"></div>
-          <h3>BP Check</h3>
-          <p>ऑटोमैटिक BP मशीन से ब्लड प्रेशर जाँच।</p>
+            <img src="bp-check.png" alt="BP Check">
+            <h3>BP Check</h3>
+            <p>ऑटोमैटिक BP मशीन से ब्लड प्रेशर जाँच।</p>
         </div>
 
         <div class="checkup-card">
-          <div class="checkup-img checkup-2"></div>
-          <h3>Pulse / SpO₂ Check</h3>
-          <p>फिंगर पल्स ऑक्सीमीटर से ऑक्सीजन एवं नाड़ी जाँच।</p>
+            <img src="pulse-oximeter.png" alt="Pulse / SpO2">
+            <h3>Pulse / SpO₂ Check</h3>
+            <p>फिंगर पल्स ऑक्सीमीटर से ऑक्सीजन स्तर एवं नाड़ी जाँच।</p>
         </div>
 
         <div class="checkup-card">
-          <div class="checkup-img checkup-3"></div>
-          <h3>Digital Thermometer</h3>
-          <p>डिजिटल थर्मामीटर से तेज़ एवं सही तापमान जाँच।</p>
+            <img src="digital-thermometer.png" alt="Thermometer">
+            <h3>Digital Thermometer</h3>
+            <p>डिजिटल थर्मामीटर से तेज़ एवं सही तापमान जाँच।</p>
         </div>
 
         <div class="checkup-card">
-          <div class="checkup-img checkup-4"></div>
-          <h3>Sugar Check</h3>
-          <p>ग्लूकोमीटर से रक्त शुगर लेवल की जाँच।</p>
+            <img src="sugar-check.png" alt="Sugar">
+            <h3>Sugar Check</h3>
+            <p>ग्लूकोमीटर से रक्त शुगर लेवल की जाँच।</p>
         </div>
 
         <div class="checkup-card">
-          <div class="checkup-img checkup-5"></div>
-          <h3>ENT जाँच</h3>
-          <p>कान, नाक, गले की आधुनिक ENT मशीन से जाँच।</p>
+            <img src="ent-scope.png" alt="ENT">
+            <h3>ENT जाँच</h3>
+            <p>कान, नाक, गला की सम्पूर्ण E.N.T जांच।</p>
         </div>
 
         <div class="checkup-card">
-          <div class="checkup-img checkup-6"></div>
-          <h3>Infrared Thermometer</h3>
-          <p>टच-लेस इन्फ्रारेड सेफ एवं तेज़ तापमान जाँच।</p>
+            <img src="infrared-thermometer.png" alt="Infrared">
+            <h3>Infrared Thermometer</h3>
+            <p>टच-लेस तापमान जाँच हेतु इन्फ्रारेड डिवाइस।</p>
         </div>
 
         <div class="checkup-card">
-          <div class="checkup-img checkup-7"></div>
-          <h3>Heart / BP Monitor</h3>
-          <p>कंटीन्यू मॉनिटरिंग के लिए पोर्टेबल मॉनिटर।</p>
+            <img src="heart-bp-monitor.png" alt="Heart Monitor">
+            <h3>Heart / BP Monitor</h3>
+            <p>इलेक्ट्रॉनिक मॉनिटरिंग के लिए विशेष मशीन।</p>
         </div>
 
         <div class="checkup-card">
-          <div class="checkup-img checkup-8"></div>
-          <h3>अन्य जाँच</h3>
-          <p>रूटीन डेयरी बेस्ड अन्य फॉलो-अप जाँच।</p>
+            <img src="stethoscope.png" alt="Stethoscope">
+            <h3>अन्य जाँच</h3>
+            <p>स्टेथोस्कोप द्वारा सामान्य जांच।</p>
         </div>
 
-      </div>
-    </section>
+    </div>
+</section>
 
     <!-- CONTACT / APPOINTMENT -->
     <section class="card contact-card" id="contact">
