--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)</title>
 
   <meta name="description"
-        content="Lakwa Hospital Obra - लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध। आपातकालीन सुविधाएँ 24x7।" />
+        content="Lakwa Hospital Obra - लकवा, नसों की कमजोरी, सायटिका , गठिया,चक्कर आना, हाथ-पैर सुन्न होना , किसी भी तरह दर्द तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध। आपातकालीन सुविधाएँ 24x7।" />
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -70,7 +70,7 @@
           <h2 class="hero-subtitle">डॉ. चंदन कुमार</h2>
 
           <p class="hero-description">
-            <strong>M.B.E.H (Patna)</strong> – लकवा, नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।<br />
+            <strong>M.B.E.H (Patna)</strong> – लकवा, नसों की कमजोरी, चक्कर आना, सायटिका, गठिया,हाथ-पैर सुन्न होना , किसी भी तरह दर्द तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।<br />
             लकवा तथा नसों से सम्बन्धित रोगों के लिए विशेष उपचार व्यवस्था, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष, मरीज एवं साथ-आने वाले परिजनों के लिए सुव्यवस्थित व्यवस्था।
           </p>
 
