--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)</title>
 
-  <meta name="description"
-        content="Lakwa Hospital Obra - लकवा, नसों की कमजोरी, सायटिका , गठिया,चक्कर आना, हाथ-पैर सुन्न होना , किसी भी तरह दर्द तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध। आपातकालीन सुविधाएँ 24x7।" />
+  <title>
+    Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)
+  </title>
+
+  <!-- SEO Description -->
+  <meta
+    name="description"
+    content="Lakwa Hospital Obra - लकवा, नसों की कमजोरी, सायटिका, गठिया, चक्कर आना, हाथ-पैर सुन्न होना, किसी भी तरह दर्द तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध। आपातकालीन सुविधाएँ 24x7 – ओबरा, औरंगाबाद, बिहार।"
+  />
+
+  <!-- SEO Keywords -->
+  <meta
+    name="keywords"
+    content="Lakwa Hospital Obra, Lakwa Aspatal Obra, लकवा अस्पताल ओबरा, लकवा अस्पताल औरंगाबाद, Lakwa Hospital Aurangabad Bihar, Dr Chandan Kumar, डॉ चंदन कुमार, लकवा का इलाज Obra, paralysis treatment obra, neuro hospital obra, Obra hospital NH-139"
+  />
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -14,7 +26,9 @@
 
   <!-- TOP BAR TEXT -->
   <div class="top-text">
-    <strong>Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)</strong>
+    <strong>
+      Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)
+    </strong>
   </div>
 
   <!-- EMERGENCY STRIP -->
@@ -70,8 +84,11 @@
           <h2 class="hero-subtitle">डॉ. चंदन कुमार</h2>
 
           <p class="hero-description">
-            <strong>M.B.E.H (Patna)</strong> – लकवा, नसों की कमजोरी, चक्कर आना, सायटिका, गठिया,हाथ-पैर सुन्न होना , किसी भी तरह दर्द तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध।<br />
-            लकवा तथा नसों से सम्बन्धित रोगों के लिए विशेष उपचार व्यवस्था, आधुनिक उपकरण, साफ-सुथरा वातानुकूलित कक्ष, मरीज एवं साथ-आने वाले परिजनों के लिए सुव्यवस्थित व्यवस्था।
+            <strong>M.B.E.H (Patna)</strong> – लकवा, नसों की कमजोरी, चक्कर आना, सायटिका, गठिया,
+            हाथ-पैर सुन्न होना, किसी भी तरह दर्द तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख
+            24 घंटे उपलब्ध।<br />
+            लकवा तथा नसों से सम्बन्धित रोगों के लिए विशेष उपचार व्यवस्था, आधुनिक उपकरण,
+            साफ-सुथरा वातानुकूलित कक्ष, मरीज एवं साथ-आने वाले परिजनों के लिए सुव्यवस्थित व्यवस्था।
           </p>
 
           <ul class="hero-points">
@@ -88,7 +105,7 @@
       </div>
     </section>
 
-    <!-- STATS STRIP (BLUE BOXES) -->
+    <!-- STATS STRIP -->
     <section class="stats" id="stats">
       <div class="stat-card">
         <div class="stat-icon">👨‍⚕️</div>
@@ -128,62 +145,65 @@
       </ul>
     </section>
 
-<section class="checkup-section">
-    <h2 class="section-title">जांच सुविधाएँ / Checkup Services</h2>
-    <p class="section-subtitle">हमारे यहाँ निम्न आधुनिक मशीनों द्वारा जाँच की सुविधाएं उपलब्ध हैं।</p>
+    <!-- CHECKUP SECTION -->
+    <section class="card checkup-section" id="checkup">
+      <h2 class="section-title">जांच सुविधाएँ / Checkup Services</h2>
+      <p class="section-text">
+        हमारे यहाँ निम्न आधुनिक मशीनों द्वारा जाँच की सुविधाएं उपलब्ध हैं।
+      </p>
 
-    <div class="checkup-grid">
+      <div class="checkup-grid">
 
         <div class="checkup-card">
-            <img src="bp-check.png" alt="BP Check">
-            <h3>BP Check</h3>
-            <p>ऑटोमैटिक BP मशीन से ब्लड प्रेशर जाँच।</p>
+          <img src="bp-check.png" alt="BP Check" />
+          <h3>BP Check</h3>
+          <p>ऑटोमैटिक BP मशीन से ब्लड प्रेशर जाँच।</p>
         </div>
 
         <div class="checkup-card">
-            <img src="pulse-oximeter.png" alt="Pulse / SpO2">
-            <h3>Pulse / SpO₂ Check</h3>
-            <p>फिंगर पल्स ऑक्सीमीटर से ऑक्सीजन स्तर एवं नाड़ी जाँच।</p>
+          <img src="pulse-oximeter.png" alt="Pulse / SpO₂" />
+          <h3>Pulse / SpO₂ Check</h3>
+          <p>फिंगर पल्स ऑक्सीमीटर से ऑक्सीजन स्तर एवं नाड़ी जाँच।</p>
         </div>
 
         <div class="checkup-card">
-            <img src="digital-thermometer.png" alt="Thermometer">
-            <h3>Digital Thermometer</h3>
-            <p>डिजिटल थर्मामीटर से तेज़ एवं सही तापमान जाँच।</p>
+          <img src="digital-thermometer.png" alt="Thermometer" />
+          <h3>Digital Thermometer</h3>
+          <p>डिजिटल थर्मामीटर से तेज़ एवं सही तापमान जाँच।</p>
         </div>
 
         <div class="checkup-card">
-            <img src="sugar-check.png" alt="Sugar">
-            <h3>Sugar Check</h3>
-            <p>ग्लूकोमीटर से रक्त शुगर लेवल की जाँच।</p>
+          <img src="sugar-check.png" alt="Sugar" />
+          <h3>Sugar Check</h3>
+          <p>ग्लूकोमीटर से रक्त शुगर लेवल की जाँच।</p>
         </div>
 
         <div class="checkup-card">
-            <img src="ent-scope.png" alt="ENT">
-            <h3>ENT जाँच</h3>
-            <p>कान, नाक, गला की सम्पूर्ण E.N.T जांच।</p>
+          <img src="ent-scope.png" alt="ENT" />
+          <h3>ENT जाँच</h3>
+          <p>कान, नाक, गला की सम्पूर्ण E.N.T जांच।</p>
         </div>
 
         <div class="checkup-card">
-            <img src="infrared-thermometer.png" alt="Infrared">
-            <h3>Infrared Thermometer</h3>
-            <p>टच-लेस तापमान जाँच हेतु इन्फ्रारेड डिवाइस।</p>
+          <img src="infrared-thermometer.png" alt="Infrared" />
+          <h3>Infrared Thermometer</h3>
+          <p>टच-लेस तापमान जाँच हेतु इन्फ्रारेड डिवाइस।</p>
         </div>
 
         <div class="checkup-card">
-            <img src="heart-bp-monitor.png" alt="Heart Monitor">
-            <h3>Heart / BP Monitor</h3>
-            <p>इलेक्ट्रॉनिक मॉनिटरिंग के लिए विशेष मशीन।</p>
+          <img src="heart-bp-monitor.png" alt="Heart Monitor" />
+          <h3>Heart / BP Monitor</h3>
+          <p>इलेक्ट्रॉनिक मॉनिटरिंग के लिए विशेष मशीन।</p>
         </div>
 
         <div class="checkup-card">
-            <img src="stethoscope.png" alt="Stethoscope">
-            <h3>अन्य जाँच</h3>
-            <p>स्टेथोस्कोप द्वारा सामान्य जांच।</p>
+          <img src="stethoscope.png" alt="Stethoscope" />
+          <h3>अन्य जाँच</h3>
+          <p>स्टेथोस्कोप द्वारा सामान्य जांच।</p>
         </div>
 
-    </div>
-</section>
+      </div>
+    </section>
 
     <!-- CONTACT / APPOINTMENT -->
     <section class="card contact-card" id="contact">
@@ -195,39 +215,45 @@
             पता: नियर पानी टंकी, ओबरा ब्लॉक के सामने NH-139, ओबरा, औरंगाबाद, बिहार – 824124
           </p>
           <p class="section-text">
-            मोबाइल: <a href="tel:+919771737437">+91 97717 37437</a>,
+            मोबाइल:
+            <a href="tel:+919771737437">+91 97717 37437</a>,
             <a href="tel:+918210609411">+91 82106 09411</a><br />
             कॉल या फॉर्म भरने पर आपका कॉल वापस किया जाएगा।
           </p>
         </div>
 
-        <form class="contact-form">
+        <!-- YAHAN ID & NAME ATTRIBUTES ADD KIYE HAIN -->
+        <form class="contact-form" id="appointmentForm">
           <label>
             रोगी का नाम*
-            <input type="text" placeholder="रोगी का नाम" required />
+            <input type="text" name="patientName" placeholder="रोगी का नाम" required />
           </label>
 
           <label>
             मोबाइल नंबर*
-            <input type="tel" placeholder="10 अंकों का मोबाइल नंबर" required />
+            <input type="tel" name="mobile" placeholder="10 अंकों का मोबाइल नंबर" required />
           </label>
 
           <label>
             पसंदीदा तिथि
-            <input type="date" />
+            <input type="date" name="date" />
           </label>
 
           <label>
             समस्या
-            <textarea rows="3" placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"></textarea>
+            <textarea
+              name="problem"
+              rows="3"
+              placeholder="संक्षेप में समस्या लिखें (जैसे – लकवा, नसों की कमजोरी, दर्द आदि)"
+            ></textarea>
           </label>
 
           <button type="submit" class="btn btn-primary full-width">
-            अपॉइंटमेंट भेजें
+            अपॉइंटमेंट WhatsApp पर भेजें
           </button>
 
           <p class="small-note">
-            फॉर्म भरने के बाद आपका कॉल वापस किया जाएगा, और समय की पुष्टि की जाएगी।
+            बटन दबाने पर WhatsApp खुलेगा और आपकी डिटेल डॉक्टर की टीम तक पहुँच जाएगी।
           </p>
         </form>
       </div>
@@ -237,8 +263,10 @@
     <section class="card" id="about">
       <h2 class="section-title">About Us – हमारा अस्पताल</h2>
       <p class="section-text">
-        हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमजोरी, दर्द आदि से सम्बन्धित विशेष उपचार प्रदान करता है।
-        डॉ. चंदन कुमार द्वारा आधुनिक उपकरणों और अनुभवी टीम की देखरेख में उपचार किया जाता है, ताकि मरीजों को बेहतर और सुरक्षित सेवा प्राप्त हो सके।
+        हमारा अस्पताल लकवा (पैरालिसिस), नसों की कमजोरी, चक्कर आना, हाथ-पैर सुन्न होना, कमजोरी,
+        दर्द आदि से सम्बन्धित विशेष उपचार प्रदान करता है। डॉ. चंदन कुमार द्वारा आधुनिक उपकरणों
+        और अनुभवी टीम की देखरेख में उपचार किया जाता है, ताकि मरीजों को बेहतर और सुरक्षित सेवा
+        प्राप्त हो सके।
       </p>
       <ul class="service-list">
         <li>✔ लकवा एवं नसों का विशेष उपचार</li>
@@ -252,8 +280,9 @@
     <section class="card" id="privacy">
       <h2 class="section-title">Privacy Policy (गोपनीयता नीति)</h2>
       <p class="section-text">
-        इस वेबसाइट पर प्राप्त जानकारी केवल आपकी अपॉइंटमेंट सुविधा एवं स्वास्थ्य सम्बन्धी सलाह हेतु प्रयोग की जाती है।
-        आपकी अनुमति के बिना आपकी व्यक्तिगत जानकारी किसी तीसरे पक्ष के साथ साझा नहीं की जाएगी।
+        इस वेबसाइट पर प्राप्त जानकारी केवल आपकी अपॉइंटमेंट सुविधा एवं स्वास्थ्य सम्बन्धी सलाह हेतु
+        प्रयोग की जाती है। आपकी अनुमति के बिना आपकी व्यक्तिगत जानकारी किसी तीसरे पक्ष के साथ साझा
+        नहीं की जाएगी।
       </p>
     </section>
 
@@ -261,9 +290,9 @@
     <section class="card" id="disclaimer">
       <h2 class="section-title">Disclaimer (अस्वीकरण)</h2>
       <p class="section-text">
-        इस वेबसाइट पर दी गई जानकारी सामान्य जानकारी के उद्देश्य से है।
-        किसी भी निदान या उपचार के लिए हमेशा डॉक्टर से प्रत्यक्ष परामर्श लें।
-        वेबसाइट पर दी गई जानकारी के आधार पर स्वयं उपचार करना उचित नहीं है।
+        इस वेबसाइट पर दी गई जानकारी सामान्य जानकारी के उद्देश्य से है। किसी भी निदान या उपचार के लिए
+        हमेशा डॉक्टर से प्रत्यक्ष परामर्श लें। वेबसाइट पर दी गई जानकारी के आधार पर स्वयं उपचार करना
+        उचित नहीं है।
       </p>
     </section>
 
@@ -299,8 +328,13 @@
       <div class="map-wrapper">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3619.3592429845307!2d84.36522807537169!3d24.88572497791284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDUzJzA4LjYiTiA4NMKwMjInMDQuMSJF!5e0!3m2!1sen!2sin!4v1764600183480!5m2!1sen!2sin"
-          width="100%" height="350" style="border:0; border-radius:12px;" allowfullscreen=""
-          loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          width="100%"
+          height="350"
+          style="border:0; border-radius:12px;"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
     </section>
 
@@ -320,15 +354,47 @@
     </p>
   </footer>
 
-  <!-- MOBILE NAV SCRIPT -->
+  <!-- MOBILE NAV + WHATSAPP FORM SCRIPT -->
   <script>
     document.addEventListener("DOMContentLoaded", () => {
+      // Mobile nav toggle
       const toggle = document.querySelector(".nav-toggle");
       const nav = document.querySelector(".main-nav");
 
       if (toggle && nav) {
         toggle.addEventListener("click", () => {
           nav.classList.toggle("nav-open");
+        });
+      }
+
+      // Appointment form -> WhatsApp
+      const form = document.getElementById("appointmentForm");
+      if (form) {
+        form.addEventListener("submit", function (e) {
+          e.preventDefault();
+
+          const name = form.patientName.value.trim();
+          const mobile = form.mobile.value.trim();
+          const date = form.date.value.trim();
+          const problem = form.problem.value.trim();
+
+          if (!name || !mobile) {
+            alert("कृपया नाम और मोबाइल नंबर भरें।");
+            return;
+          }
+
+          const text =
+            "नया ऑनलाइन अपॉइंटमेंट:\n" +
+            "नाम: " + name + "\n" +
+            "मोबाइल: " + mobile + "\n" +
+            "तिथि: " + (date || "—") + "\n" +
+            "समस्या: " + (problem || "—");
+
+          // WhatsApp number (doctor / hospital ka)
+          const waNumber = "919771737437"; // +91 हटाकर
+          const waUrl = "https://wa.me/" + waNumber + "?text=" + encodeURIComponent(text);
+
+          window.open(waUrl, "_blank");
         });
       }
     });
