--- a/index.html
+++ b/index.html
@@ -8,17 +8,83 @@
     Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)
   </title>
 
-  <!-- SEO Description -->
+  <!-- BASIC SEO -->
   <meta
     name="description"
     content="Lakwa Hospital Obra - लकवा, नसों की कमजोरी, सायटिका, गठिया, चक्कर आना, हाथ-पैर सुन्न होना, किसी भी तरह दर्द तथा न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24 घंटे उपलब्ध। आपातकालीन सुविधाएँ 24x7 – ओबरा, औरंगाबाद, बिहार।"
   />
-
-  <!-- SEO Keywords -->
   <meta
     name="keywords"
-    content="Lakwa Hospital Obra, Lakwa Aspatal Obra, लकवा अस्पताल ओबरा, लकवा अस्पताल औरंगाबाद, Lakwa Hospital Aurangabad Bihar, Dr Chandan Kumar, डॉ चंदन कुमार, लकवा का इलाज Obra, paralysis treatment obra, neuro hospital obra, Obra hospital NH-139"
+    content="Lakwa Hospital Obra, Lakwa Aspatal Obra, लकवा अस्पताल ओबरा, लकवा अस्पताल औरंगाबाद, Lakwa Hospital Aurangabad Bihar, Dr Chandan Kumar, डॉ चंदन कुमार, लकवा इलाज Obra, paralysis treatment obra, neuro hospital obra, lakwahospital.store"
   />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://lakwahospital.store/" />
+
+  <!-- OPEN GRAPH (Facebook, WhatsApp, etc.) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lakwahospital.store/" />
+  <meta
+    property="og:title"
+    content="Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा (औरंगाबाद, बिहार)"
+  />
+  <meta
+    property="og:description"
+    content="लकवा, नसों की कमजोरी, सायटिका, गठिया, चक्कर आना, हाथ-पैर सुन्न होना और न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24×7 – Lakwa Hospital Obra, Aurangabad (Bihar)।"
+  />
+  <meta property="og:image" content="https://lakwahospital.store/doctorphoto.png" />
+
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta
+    name="twitter:title"
+    content="Lakwa Hospital Obra – लकवा अस्पताल, आपातकालीन सहायता: ओबरा"
+  />
+  <meta
+    name="twitter:description"
+    content="लकवा एवं नसों से संबंधित रोगों का सुरक्षित और अनुभवी उपचार 24×7 – Lakwa Hospital Obra, Bihar."
+  />
+  <meta name="twitter:image" content="https://lakwahospital.store/doctorphoto.png" />
+
+  <!-- LOCAL BUSINESS / HOSPITAL SCHEMA -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Hospital",
+    "name": "Lakwa Hospital Obra",
+    "description": "लकवा, नसों की कमजोरी, सायटिका, गठिया, चक्कर आना, हाथ-पैर सुन्न होना और न्यूरो सम्बन्धित रोगों की विशेष देखरेख 24×7 – Lakwa Hospital Obra, Aurangabad (Bihar)।",
+    "url": "https://lakwahospital.store/",
+    "image": "https://lakwahospital.store/doctorphoto.png",
+    "telephone": [
+      "+919771737437",
+      "+918210606911"
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Near Pani Tanki, In front of Obra Block, NH-139",
+      "addressLocality": "Obra",
+      "addressRegion": "Aurangabad",
+      "postalCode": "824124",
+      "addressCountry": "IN"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 24.885725,
+      "longitude": 84.365228
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+      ],
+      "opens": "00:00",
+      "closes": "23:59"
+    }],
+    "medicalSpecialty": [
+      "Neurology",
+      "PhysicalTherapy"
+    ]
+  }
+  </script>
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -217,12 +283,11 @@
           <p class="section-text">
             मोबाइल:
             <a href="tel:+919771737437">+91 97717 37437</a>,
-            <a href="tel:+918210609411">+91 82106 09411</a><br />
+            <a href="tel:+918210606911">+91 82106 06911</a><br />
             कॉल या फॉर्म भरने पर आपका कॉल वापस किया जाएगा।
           </p>
         </div>
 
-        <!-- YAHAN ID & NAME ATTRIBUTES ADD KIYE HAIN -->
         <form class="contact-form" id="appointmentForm">
           <label>
             रोगी का नाम*
@@ -348,9 +413,18 @@
       <a href="#privacy">Privacy Policy</a>
       <a href="#disclaimer">Disclaimer</a>
     </div>
+
+    <div class="footer-credit" style="margin-top:15px; text-align:center;">
+      <a href="https://fastupdate.online" target="_blank" style="text-decoration:none; color:#00e1ff;">
+        <img src="pts-logo.png"
+             alt="Prince Tech Solutions Pvt. Ltd."
+             style="width:80px; height:auto; border-radius:10px; display:block; margin:0 auto 8px;" />
+        <strong style="font-size:16px;">Prince Tech Solutions Pvt. Ltd.</strong>
+      </a>
+    </div>
+
     <p class="footer-copy">
-      © 2025 Lakwa Hospital, Obra Bihar<br />
-      Designed &amp; Developed by Prince Kumar
+      © 2025 Lakwa Hospital, Obra Bihar
     </p>
   </footer>
 
